--- a/Dropbox/AndroidManifest.xml
+++ b/Dropbox/AndroidManifest.xml
@@ -12,8 +12,22 @@
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
+                <category
+            android:name="android.intent.category.BROWSABLE"
+        ></category>
+    
             </intent-filter>
         </activity>
-
+        <!--<activity android:name=".DropboxViewActivity"
+        android:label="@string/app_name">
+         <intent-filter>          
+    <action android:name="android.intent.action.VIEW"/>     
+    <category android:name="android.intent.category.DEFAULT"/>
+    <category android:name="android.intent.category.BROWSABLE"/>
+    <data android:scheme="MobConnect" android:host="dropbox"></data>
+        </intent-filter>
+        </activity>
+    -->
+    
     </application>
 </manifest>
