--- a/testing.ini
+++ b/testing.ini
@@ -4,10 +4,10 @@ server = api.dropbox.com
 content_server = api-content.dropbox.com
 port = 443
 
-request_token_url = https://api.dropbox.com/0/oauth/request_token
+request_token_url = http://api.dropbox.com/0/oauth/request_token
 access_token_url = https://api.dropbox.com/0/oauth/access_token
 authorization_url = https://www.dropbox.com/0/oauth/authorize
-trusted_access_token_url = https://www.dropbox.com/0/token
+trusted_access_token_url = https://api.dropbox.com/0/token
 
 
 root = dropbox
