Opens a browser when you write an open command

--- a/Dropbox_Api_Check_Dsktp/testing.ini
+++ b/Dropbox_Api_Check_Dsktp/testing.ini
@@ -12,8 +12,8 @@ trusted_access_token_url = https://api.dropbox.com/0/token
 root = dropbox
 
 # key and secret granted by the service provider for this consumer application - same as the mockoauthdatastore
-consumer_key = 9xok2ki1zjn2r1p
-consumer_secret = szsiqick0cqrcu8
+consumer_key = iypm3vb6d6vxha0
+consumer_secret = e1kq1rhpwu6dfhx
 
 # leave the verifier blank for now
 verifier = 
@@ -21,6 +21,6 @@ verifier =
 # these two configurations aren't needed in normal operation,
 # they're only used during the unit tests to make sure that 
 # everything is working.
-testing_user = bhagyashree.mandora@yahoo.co.in
-testing_password = 
+testing_user = faizan.khan.007@gmail.com
+testing_password = faizan9764344549
 
