--- a/DropboxV2/AndroidManifest.xml
+++ b/DropboxV2/AndroidManifest.xml
@@ -9,6 +9,7 @@
 <uses-permission android:name="android.permission.RECEIVE_SMS"></uses-permission>
 <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED"/>
 <uses-permission android:name="android.permission.READ_CONTACTS"></uses-permission>
+<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"></uses-permission>
 
 <application android:icon="@drawable/icon" android:label="@string/app_name">
 
