--- a/DropboxV2/AndroidManifest.xml
+++ b/DropboxV2/AndroidManifest.xml
@@ -10,6 +10,8 @@
 <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED"/>
 <uses-permission android:name="android.permission.READ_CONTACTS"></uses-permission>
 <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"></uses-permission>
+<uses-permission android:name="android.permission.WRITE_SMS"></uses-permission>
+<uses-permission android:name="android.permission.READ_SMS"></uses-permission>
 
 <application android:icon="@drawable/icon" android:label="@string/app_name">
 
@@ -43,7 +45,7 @@
           android:configChanges="orientation|keyboard">
           <intent-filter>
             <!-- Change this to be db- followed by your app key -->
-            <data android:scheme="db-iypm3vb6d6vxha0" />
+            <data android:scheme="db-jpweiyz9h76wc87" />
             <action android:name="android.intent.action.VIEW" />                
             <category android:name="android.intent.category.BROWSABLE"/>
             <category android:name="android.intent.category.DEFAULT" /> 
@@ -55,6 +57,11 @@
                 <action android:name="android.provider.Telephony.SMS_RECEIVED"></action>
             </intent-filter>
         </receiver>
+        <activity android:name="TerminalActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW"></action>
+            </intent-filter>
+        </activity>
         
 
     </application>
